refatorando código e testes unitarios